# android_breakpad_demo

./: Readme.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kl/breakpadtestdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: crash.cpp
app/src/main/java/com/kl/breakpadtestdemo/: MainActivity.java
app/src/main/java/com/kl/crash/: Crash.java
app/src/main/res/layout/: content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kl/breakpadtestdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib_mb_break_pad/: CMakeLists.txt  build.gradle  gradle.properties  proguard-rules.pro
lib_mb_break_pad/src/main/: AndroidManifest.xml
lib_mb_break_pad/src/main/cpp/: breakpad.cpp
lib_mb_break_pad/src/main/include/common/.deps/: path_helper.Po
lib_mb_break_pad/src/main/include/processor/: microdump_stackwalk  minidump_dump  minidump_stackwalk
lib_mb_break_pad/src/main/include/processor/.deps/: basic_code_modules.Po  basic_source_line_resolver.Po  call_stack.Po  cfi_frame_info.Po  convert_old_arm64_context.Po  disassembler_x86.Po  dump_context.Po  exploitability.Po  exploitability_linux.Po  exploitability_win.Po  fast_source_line_resolver.Po  logging.Po  microdump.Po  microdump_processor.Po  microdump_stackwalk.Po  minidump.Po  minidump_dump.Po  minidump_processor.Po  minidump_stackwalk.Po  (+22 more)
lib_mb_break_pad/src/main/res/values/: strings.xml
(+1 files in other folders)
